--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "pngjs": "~3.0.0",
-    "mongodb": "~2.2.9"
+    "mongodb": "~2.2.9",
+    "underscore": "~1.8.3"
   }
 }
