--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "pngjs": "~3.0.0",
     "mongodb": "~2.2.9",
-    "underscore": "~1.8.3",
-    "node-uuid": "~1.4.7"
+    "underscore": "~1.8.3"
   }
 }
