--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "pngjs": "~3.0.0",
     "mongodb": "~2.2.9",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "restify": "~4.1.1"
   }
 }
