--- a/package.json
+++ b/package.json
@@ -1,20 +1,50 @@
 {
   "name": "gum47",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "Procedural Galaxy Generator",
   "main": "index.js",
-  "bin": {
-    "gum47": "generateGalaxy.js"
+  "repository": "git@github.com:mdbarr/gum47",
+  "author": "mark@hyperingenuity.com",
+  "license": "MIT",
+  "private": false,
+  "dependencies": {
+    "@hyperingenuity/vue-plugin": "^0.7.1",
+    "barrkeep": "^2.8.0",
+    "core-js": "^3.8.2",
+    "three": "^0.124.0",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.9",
+    "vuetify": "^2.4.2",
+    "yargs": "^16.2.0"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.5.10",
+    "@vue/cli-plugin-eslint": "^4.5.10",
+    "@vue/cli-plugin-router": "^4.5.10",
+    "@vue/cli-service": "^4.5.10",
+    "@vue/eslint-config-standard": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^7.4.0",
+    "sass": "^1.32.2",
+    "sass-loader": "^10.1.0",
+    "stylelint": "^13.8.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-webpack-plugin": "^2.1.1",
+    "vue-cli-plugin-vuetify": "^2.0.9",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "BSD-2-Clause",
-  "dependencies": {
-    "pngjs": "~3.0.0",
-    "mongodb": "~2.2.9",
-    "underscore": "~1.8.3",
-    "restify": "~4.1.1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "lint:css": "stylelint 'src/*.vue' 'src/**/*.vue'",
+    "fix": "yarn lint --fix; yarn lint:css --fix"
   }
 }
