--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "dependencies": {
     "@hyperingenuity/vue-plugin": "^0.7.1",
+    "@tweenjs/tween.js": "^18.6.4",
     "barrkeep": "^2.8.0",
     "core-js": "^3.8.2",
     "three": "^0.124.0",
